--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -1,20 +1,82 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
 
 /* Common */
+.header {
+  height: 120px;
+}
+
 .header-container {
   max-width: 1400px;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
   width: 150px;
   height: 150px;
+  text-align: center;
+  font-family: "Prata";
   font-size: 30px;
   color: #F2CCB7;
   background-color: #A80000;
+}
+
+.header-nav {
+  display: flex;
+  gap: 25px;
+}
+.header-nav-item {
+  font-size: 24px;
+  font-family: "Inter";
+  color: #010101;
+}
+
+.footer {
+  min-height: 250px;
+  background-color: #000;
+}
+
+.footer-container {
+  max-width: 1400px;
+  width: 100%;
+  min-height: 250px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-copyright {
+  font-size: 24px;
+  font-family: "Inter";
+  color: white;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 18px;
+}
+.footer-nav-item {
+  font-size: 24px;
+  font-family: "Inter";
+  color: white;
 }
 
 /* End Common */
