--- a/assets/scss/partials/common/header.scss
+++ b/assets/scss/partials/common/header.scss
@@ -1,21 +1,37 @@
 .header {
-
+    height: 120px;
 }
 
 .header-container {
     max-width: 1400px;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: flex-start;
     width: 150px;
     height: 150px;
+    text-align: center;
+    font-family: 'Prata';
     font-size: 30px;
     color: #F2CCB7;
     background-color: #A80000;
 }
 
 .header-nav {
-
+    display: flex;
+    gap: 25px;
+    &-item {
+        font-size: 24px;
+        font-family: 'Inter';
+        color: #010101;
+    }
 }
