--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -1,4 +1,13 @@
-body {
+/* Sizes */
+/* End Sizes */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   padding: 0;
   margin: 0;
 }
@@ -9,7 +18,10 @@ a {
 
 /* Common */
 .header {
+  position: relative;
   height: 120px;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.81);
 }
 
 .header-container {
@@ -43,7 +55,7 @@ a {
 .header-nav-item {
   font-size: 24px;
   font-family: "Inter";
-  color: #010101;
+  color: #fff;
 }
 
 .footer {
@@ -81,6 +93,60 @@ a {
 
 /* End Common */
 /* Home */
+.welcome {
+  position: relative;
+  height: calc(100vh - 120px);
+  background-color: #000;
+}
+
+.welcome-container {
+  position: relative;
+  max-width: 1400px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  z-index: 1;
+}
+
+.welcome-title {
+  margin-top: 160px;
+  font-size: 60px;
+  font-family: "Inter";
+  font-weight: lighter;
+  color: #fff;
+}
+
+.welcome-paragraph {
+  font-size: 28px;
+  font-family: "Inter";
+  font-weight: lighter;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.welcome-button {
+  cursor: pointer;
+  font-size: 24px;
+  font-family: "Inter";
+  padding: 16px 40px;
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+.welcome-cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
 /* End Home */
 
 /*# sourceMappingURL=bundle.css.map */
