--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -1,3 +1,10 @@
-{{ define "main" }}
+{{ define "main" }} 
+    <!-- welcome -->
+    {{ partial "home/welcome.html"  }}
+    <!-- /welcome -->
+
+    <!-- about -->
+    {{ partial "home/about.html"  }}
+    <!-- /about -->
 
 {{end}}
