--- a/layouts/partials/home/welcome.html
+++ b/layouts/partials/home/welcome.html
@@ -4,7 +4,5 @@
         <p class="welcome-paragraph">I craft software that solve problems</p>
         <a href="" class="welcome-button">Discover</a>
     </div>
-    <div>
-        <img src="" alt="">
-    </div>
+        <img class="welcome-cover" src="/img/welcome-image.png" alt="">
 </section>
