--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -147,6 +147,148 @@ a {
   z-index: 0;
 }
 
+.about {
+  background-color: #000000;
+}
+
+.about-container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 248px;
+  padding-bottom: 386px;
+}
+
+.about-title {
+  font-family: "Inter";
+  font-size: 80px;
+  font-weight: 700;
+  color: #ffffff;
+  margin-bottom: 80px;
+}
+
+.about-paragraph {
+  font-family: "Inter";
+  font-size: 42px;
+  font-weight: 300;
+  line-height: 70px;
+  color: #ffffff;
+  margin-bottom: 80px;
+}
+
+.about-links {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.about-link {
+  font-family: "Inter";
+  font-size: 42px;
+  font-weight: 300;
+  line-height: 70px;
+  color: #ffffff;
+}
+
+.project {
+  padding-top: 80px;
+  padding-bottom: 128px;
+  background-color: #fff;
+}
+
+.project-container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.project-title {
+  font-family: "Inter";
+  font-size: 80px;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 50px;
+}
+
+.project-slider {
+  height: 560px;
+}
+.project-slider .swiper-wrapper {
+  height: 610px;
+}
+.project-slider .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.project-slider .swiper-pagination {
+  bottom: 0px;
+}
+.project-slider .swiper-pagination-bulllet {
+  width: 20px;
+  height: 20px;
+  margin: 0 6px;
+  background-color: #E2E2E2;
+}
+.project-slider .swiper-pagination-bulllet-active {
+  background-color: #686161;
+}
+
+.project-paragraph {
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 42px;
+  color: #000;
+}
+
+.blog-container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
+
+.blog-title {
+  font-weight: "Inter";
+  font-size: 80px;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 80px;
+}
+
+.blog-items {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.blog-item {
+  font-family: "Inter";
+  font-size: 40px;
+  color: #727272;
+}
+
 /* End Home */
+/* Blog */
+.blog-posts {
+  padding: 130px 0;
+  background-color: #F1F1F1;
+}
+
+.blog-posts-container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.blog-posts-card-title {
+  font-family: "Inter";
+  font-size: 80px;
+  font-weight: 700;
+  color: #000;
+}
+/* End Blog */
 
 /*# sourceMappingURL=bundle.css.map */
