--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,4 +9,10 @@
 /* Home */
 @import "partials/home/welcome.scss";
 @import "partials/home/about.scss";
+@import "partials/home/projects.scss";
+@import "partials/home/blog.scss";
 /* End Home */
+
+/* Blog */
+@import "partials/blog/blog-posts.scss";
+/* End Blog */
